"Sending of the message failed. There was an error attaching xxx.pdf. Please check that you have access to the file."
Categories
(MailNews Core :: Composition, defect)
Tracking
(thunderbird_esr91+ fixed, thunderbird95 fixed)
People
(Reporter: byohorse, Assigned: rnons)
References
()
Details
Attachments
(4 files)
|
16.86 KB,
image/jpeg
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
|
Bug 1741805 - Prevent tmp attachments being removed before msg is created in nsMsgCompose. r=mkmelin
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
11.44 KB,
patch
|
wsmwk
:
approval-comm-esr91+
|
Details | Diff | Splinter Review |
Steps to reproduce:
I use several Filters in my Thunderbird to forward documents. Have used the same Filters for many months with no problem.
When I collected my emails, those with attachments that were supposed to forward received an error message.
"Sending of the message failed. There was an error attaching xxx.pdf. Please check that you have access to the file."
Actual results:
The messages did not forward but the rest of the filter continued (ie moved them to a folder identified in the Filter.
Expected results:
The message should have forwarded (and has always done so until now).
Having spoken to fellow Thunderbird users, they have also the same problem yesterday and today.
Exactly the same error message, different ISPs, different email addresses, different computers (and actually, different parts of the country).
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
To prevent ~nsMsgComposed being called before sending finishes.
| Assignee | ||
Comment 3•4 years ago
|
||
Sorry for the bug. Can you help me test by downloading an artifact build from https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/U0npoXoDTneGqTFHlVeBkw/runs/1/artifacts/public/build/target.zip, it's built on https://treeherder.mozilla.org/jobs?repo=try-comm-central&revision=92af9d66b3d142efeb728fc2dd5cfae7672457e9. Thanks.
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/35876265390b
Wait for SendMsg in nsMsgComposeService.cpp to prevent ~nsMsgComposed being called before sending finishes. r=mkmelin
I have tested this since it was resolved and still getting exactly the same error.
When using a Filter to forward a message with an attachment, it is still saying "Sending of the message failed. There was an error attaching xxx.pdf. Please check that you have access to the file."
I have ensured my Thunderbird is up to date and have closed, and opened the software several times. Still happening.
Can you please reinvestigate the issue.
Comment 6•4 years ago
|
||
This bug is unresolved.
Message filter forwarding is needed by many users and is therefore having a serious impact.
They have been forced to downgrade to TB78 or move to Outlook.
I hope it will be fixed as soon as possible with the highest priority.
The version in which this bug is occurring is:
- 91.3.1
- 91.3.2
This bug has not occurred below:
- 78
- 91.0 - 91.3.0
- 95.0b3
- 96.0a1 (20211121114531)
When I forwarded the message with the message filter, it seemed to me that no temporary attachment was generated in the temporary folder of Windows.
I'm ready to collect logs if instructed.
Is there any update on this?
Still getting the same error.
Version 91.3.2
Thanks
Comment 8•4 years ago
|
||
I have the same problem on version 91.3.2 and on prior versions.
Inbound email has a pdf attachment.
Filter on inbox is supposed to forward the message to another email address.
Result:
Message pops up:"Sending of the message failed." "There was an error attaching {attachment_filename}. Please check that you have access to the file."
The incoming message now has an indicator that it has been forwarded.
Message has NOT been forwarded.
Run filter on folder and the error will repeat.
Also for me, filters do not work with mail forwarding. You have to wait for the correct version to be released.
Comment 10•4 years ago
|
||
facing same issue since many days
attachments not getting forwarded through filters, getting the same error. and its creating a lot of issues
im on 91.3.2
someone kindly rectify this urgently
Comment 11•4 years ago
|
||
This doesn't only happen when filters are in use.
If I send an e-mail with an attachment using a distribution list of 100, it will normally fail with the error message that has already been described after sending about 30.
Comment 12•4 years ago
|
||
The developer will be back in a few days and can address it then.
| Assignee | ||
Comment 13•4 years ago
|
||
We set a bug to resolved when the patch landed to the trunk, which becomes daily build. According to comment 6
This bug has not occurred below:
78
91.0 - 91.3.0
95.0b3
96.0a1 (20211121114531) --- this is the daily build
I will request uplifts now, please wait a few days for it to reach beta and then esr91, thanks.
| Assignee | ||
Comment 14•4 years ago
|
||
Comment on attachment 9251512 [details]
Bug 1741805 - Wait for SendMsg in nsMsgComposeService.cpp. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): bug 1741846
User impact if declined: Forwarding message with attachments doesn't work in filters
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low
Comment 15•4 years ago
|
||
Comment on attachment 9251512 [details]
Bug 1741805 - Wait for SendMsg in nsMsgComposeService.cpp. r=mkmelin
[Triage Comment]
Approved for beta
Updated•4 years ago
|
Comment 17•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 95.0b5:
https://hg.mozilla.org/releases/comm-beta/rev/301b0116b26c
Comment 18•4 years ago
|
||
has this issue been resolved?
facing a lot of difficulties due to this error
Comment 19•4 years ago
•
|
||
(In reply to use ruser from comment #18)
has this issue been resolved?
facing a lot of difficulties due to this error
It will be in beta 95.0b5 (releasing in the next day). Suggest you TEST it in a new Thunderbird profile (unless you are already using beta). Available at https://archive.mozilla.org/pub/thunderbird/releases/95.0b5/
It will be in version 91 in the next few weeks. Possibly as early as next week.
Comment 20•4 years ago
|
||
ill prefer using it in version 91 itself
thanks for the update
Updated•4 years ago
|
Comment 21•4 years ago
|
||
rnons, I am OK with taking this with an anticipated respin of 91.4.0 (build 2). Are you OK with that? If so, please request uplift.
| Assignee | ||
Comment 22•4 years ago
|
||
Sorry, I'm not convinced the patch fixes the problem, because it works for me even without the patch.
For those of you seeing the problem, can you tell me the value of mail.forward_message_mode? 0 means forward as attachment, 2 means forward inline, you can check the value from the Config Editor on Settings page. You can also try changing it to 0 or 2 to see if it's the same. Thanks.
Comment 23•4 years ago
|
||
mine shows 2
| Assignee | ||
Comment 24•4 years ago
|
||
- in ~nsMsgCompose, remove tmp attachments only if mMsgSend is not inited
- remove tmp attachments after mMsgSend->CreateAndSendMessage returns
- add tests for forwarding messages in filters
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 25•4 years ago
|
||
Comment on attachment 9251512 [details]
Bug 1741805 - Wait for SendMsg in nsMsgComposeService.cpp. r=mkmelin
Will make a new patch for esr91 tomorrow.
| Assignee | ||
Updated•4 years ago
|
Comment 26•4 years ago
|
||
Pushed by thunderbird@calypsoblue.org:
https://hg.mozilla.org/comm-central/rev/c152f5ce3a78
Prevent tmp attachments being removed before msg is created in nsMsgCompose. r=mkmelin
| Assignee | ||
Comment 27•4 years ago
|
||
[Approval Request Comment]
This patch also fixes bug 1741596, the problem is the same, tmp attachments get deleted too soon.
Comment 28•4 years ago
|
||
this patch resolves the issue?
does it have to be downloaded or something or will it be pushed to thunderbird automatically via update?
Comment 29•4 years ago
|
||
Comment on attachment 9253557 [details] [diff] [review]
1741805-esr91.patch
[Triage Comment]
Approved for esr91
(In reply to use ruser from comment #28)
this patch resolves the issue?
does it have to be downloaded or something or will it be pushed to thunderbird automatically via update?
version 91.4.0, as indicated in comment 19 and 21
Comment 30•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 91.4.0:
https://hg.mozilla.org/releases/comm-esr91/rev/ab6dfcf3a37b
Comment 32•4 years ago
|
||
when is this getting pushed out to us?
Comment 33•4 years ago
|
||
Comment 36•4 years ago
|
||
I am forwarding an email to a mail parser and it also can parse pdf attachments but when I set up a filter for the email to forward that attachment is not included.
Description
•