Bug 1741805 - Wait for SendMsg in nsMsgComposeService.cpp to prevent ~nsMsgComposed being called before sending finishes. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D131586

--HG--
extra : amend_source : bb0ebf55d554d4eef880781635b7dd303b9f564a