mailnews/compose/src/nsMsgComposeService.cpp
@@ -52,6 +52,8 @@
 #include "nsFrameLoader.h"
 #include "nsSmtpUrl.h"
 #include "mozilla/NullPrincipal.h"
+#include "mozilla/dom/PromiseNativeHandler.h"
+#include "mozilla/SpinEventLoopUntil.h"
 
 #ifdef MSGCOMP_TRACE_PERFORMANCE
 #  include "mozilla/Logging.h"
@@ -66,6 +68,7 @@
 #include "nsIPrincipal.h"
 
 using namespace mozilla;
+using namespace mozilla::dom;
 
 #ifdef XP_WIN
 #  include <windows.h>
@@ -1020,10 +1023,19 @@ nsMsgComposeService::ForwardMessage(const nsAString& forwardTo,
   rv = pMsgCompose->Initialize(pMsgComposeParams, parentWindow, nullptr);
   NS_ENSURE_SUCCESS(rv, rv);
 
-  RefPtr<mozilla::dom::Promise> promise;
+  RefPtr<Promise> promise;
   rv = pMsgCompose->SendMsg(nsIMsgSend::nsMsgDeliverNow, identity, nullptr,
                             nullptr, nullptr, getter_AddRefs(promise));
   NS_ENSURE_SUCCESS(rv, rv);
+
+  bool sendMsgFinished = false;
+
+  RefPtr<DomPromiseListener> listener = new DomPromiseListener(
+      [&](JSContext*, JS::Handle<JS::Value>) { sendMsgFinished = true; },
+      [&](nsresult) { sendMsgFinished = true; });
+  promise->AppendNativeHandler(listener);
+  SpinEventLoopUntil("nsIMsgCompose::SendMsg is async"_ns,
+                     [=]() { return sendMsgFinished; });
 
   // nsMsgCompose::ProcessReplyFlags usually takes care of marking messages
   // as forwarded. ProcessReplyFlags is normally called from
